--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: A whole lotta site
 email: minh@mnguyen.io
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  You can wonder, what is real, and what isn't real.
+  But hey, I just make things.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: contradicthelaw
